RESOLVED FIXED127992
Fix the forward declaration of RawPluginMetaData in NetscapePluginModule.h
https://bugs.webkit.org/show_bug.cgi?id=127992
Summary Fix the forward declaration of RawPluginMetaData in NetscapePluginModule.h
Zan Dobersek
Reported 2014-01-31 05:42:38 PST
Fix the forward declaration of RawPluginMetaData in NetscapePluginModule.h
Attachments
Patch (1.35 KB, patch)
2014-01-31 05:46 PST, Zan Dobersek
no flags
Zan Dobersek
Comment 1 2014-01-31 05:46:39 PST
Zan Dobersek
Comment 2 2014-01-31 10:44:44 PST
Comment on attachment 222809 [details] Patch Clearing flags on attachment: 222809 Committed r163178: <http://trac.webkit.org/changeset/163178>
Zan Dobersek
Comment 3 2014-01-31 10:44:51 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.