Fix the forward declaration of RawPluginMetaData in NetscapePluginModule.h https://bugs.webkit.org/show_bug.cgi?id=127992

Reviewed by Martin Robinson.

* Shared/Plugins/Netscape/NetscapePluginModule.h: RawPluginMetaData is a struct, so it should
be declared as such. The current forward declaration is throwing a warning when using Clang.


Canonical link: https://commits.webkit.org/145999@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@163178 268f45cc-cd09-0410-ab3c-d52691b4dbfc